# mvc_console_game

Reports/: Bocharov_Gleb_9382_lr1.odt  Bocharov_Gleb_9382_lr2.odt  Bocharov_Gleb_9382_lr3.odt  Bocharov_Gleb_9382_lr4.odt  Bocharov_Gleb_9382_lr5.odt  Bocharov_Gleb_9382_lr6.odt
Source/: CMakeLists.txt  Def.h  Main.cpp
Source/Buff/: Buff.cpp  Buff.h
Source/Cell/: Cell.cpp  Cell.h  ImpassableCell.cpp  ImpassableCell.h  OrdinaryCell.cpp  OrdinaryCell.h  PassableCell.cpp  PassableCell.h
Source/Enemy/: Enemy.cpp  Enemy.h
Source/Game/: Game.cpp  Game.h
Source/Input/: Input.cpp  Input.h
Source/Log/: ILoggable.h  ILogger.h  Loggable.cpp  Loggable.h  LoggableCoord.cpp  LoggableCoord.h  LoggableInt32.cpp  LoggableInt32.h  Logger.cpp  Logger.h
Source/Map/: Map.cpp  Map.h
Source/Player/: Player.cpp  Player.h
Source/Render/: Framebuffer.cpp  Framebuffer.h
Source/Saveable/: Saveable.h
Source/Stream/: ConsoleStream.cpp  ConsoleStream.h  FileStream.cpp  FileStream.h  MultipleStream.cpp  MultipleStream.h  Stream.h
